examples/c/error-codes/violates-constraint/fatal/CV-TTE5-bad-static.output
CV-TTE5-bad-static.c:12:4: error: incompatible operand types ('struct S1' and 'struct S2')
 5 ? s1 : s2;
   ^ ~~   ~~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
